add: data models

--- a/Web/KiberlabLMS.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Web/KiberlabLMS.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,6 @@
 ﻿@using KiberlabLMS.Common
 @using KiberlabLMS.Data.Models
+@using KiberlabLMS.Data.Models.User
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
