--- a/BasicTemplate/KiberlabLMS/KiberlabLMS/Views/Courses/Delete.cshtml
+++ b/BasicTemplate/KiberlabLMS/KiberlabLMS/Views/Courses/Delete.cshtml
@@ -30,10 +30,10 @@
             @Html.DisplayFor(model => model.CourseCode)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageData)
+            @Html.DisplayNameFor(model => model.ImageFileName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImageData)
+            @Html.DisplayFor(model => model.ImageFileName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CreatedOn)
