refactor Course model

--- a/BasicTemplate/KiberlabLMS/KiberlabLMS/Views/Courses/Details.cshtml
+++ b/BasicTemplate/KiberlabLMS/KiberlabLMS/Views/Courses/Details.cshtml
@@ -29,10 +29,10 @@
             @Html.DisplayFor(model => model.CourseCode)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageFileName)
+            @Html.DisplayNameFor(model => model.ImageFilePath)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImageFileName)
+            @Html.DisplayFor(model => model.ImageFilePath)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CreatedOn)
