--- a/BasicTemplate/KiberlabLMS/KiberlabLMS/Views/Courses/Index.cshtml
+++ b/BasicTemplate/KiberlabLMS/KiberlabLMS/Views/Courses/Index.cshtml
@@ -22,7 +22,7 @@
                 @Html.DisplayNameFor(model => model.CourseCode)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ImageFileName)
+                @Html.DisplayNameFor(model => model.ImageFilePath)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.CreatedOn)
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.CourseCode)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ImageFileName)
+                @Html.DisplayFor(modelItem => item.ImageFilePath)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.CreatedOn)
