--- a/BasicTemplate/KiberlabLMS/KiberlabLMS/Views/Lessons/Details.cshtml
+++ b/BasicTemplate/KiberlabLMS/KiberlabLMS/Views/Lessons/Details.cshtml
@@ -8,7 +8,7 @@
             @Html.DisplayNameFor(model => model.Course)
         </dt>
         <dd class="col-sm-10">
-           @Model.Course.Name
+            @Model.Course.Name
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
@@ -43,6 +43,7 @@
         </dd>
     </dl>
 </div>
+<a asp-controller="VideoSections" asp-action="Create" asp-route-lessonId="@Model.Id">Create New</a>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-controller="Courses" asp-action="Details" asp-route-id ="@Model.CourseId">Back to List</a>
