add: create video sections per lesson

--- a/BasicTemplate/KiberlabLMS/KiberlabLMS/Views/Courses/Details.cshtml
+++ b/BasicTemplate/KiberlabLMS/KiberlabLMS/Views/Courses/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model KiberlabLMS.Models.CourseModels.Course
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Name"] = "Details";
 }
 
 <h1>Details</h1>
