--- a/BasicTemplate/KiberlabLMS/KiberlabLMS/Views/Courses/Edit.cshtml
+++ b/BasicTemplate/KiberlabLMS/KiberlabLMS/Views/Courses/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model KiberlabLMS.ViewModels.Course.CourseViewModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Name"] = "Edit";
 }
 
 <h1>Edit</h1>
