--- a/BasicTemplate/KiberlabLMS/KiberlabLMS/Views/Courses/Index.cshtml
+++ b/BasicTemplate/KiberlabLMS/KiberlabLMS/Views/Courses/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<KiberlabLMS.Models.CourseModels.Course>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Name"] = "Index";
 }
 
 <h1>Index</h1>
