--- a/BasicTemplate/KiberlabLMS/KiberlabLMS/Views/Courses/Create.cshtml
+++ b/BasicTemplate/KiberlabLMS/KiberlabLMS/Views/Courses/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model KiberlabLMS.ViewModels.Course.CourseViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Name"] = "Create";
 }
 
 <h1>Create</h1>
