--- a/BasicTemplate/KiberlabLMS/KiberlabLMS/Views/Courses/Delete.cshtml
+++ b/BasicTemplate/KiberlabLMS/KiberlabLMS/Views/Courses/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model KiberlabLMS.Models.CourseModels.Course
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Name"] = "Delete";
 }
 
 <h1>Delete</h1>
