--- a/BasicTemplate/KiberlabLMS/KiberlabLMS/Views/Shared/Components/VideoSectionVC/Default.cshtml
+++ b/BasicTemplate/KiberlabLMS/KiberlabLMS/Views/Shared/Components/VideoSectionVC/Default.cshtml
@@ -4,7 +4,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create" asp-route-lessonId="@ViewData["lessonId"]">
+        <form asp-action="CreateVideoSection" asp-route-lessonId="@ViewData["lessonId"]">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="VideoUrl" class="control-label"></label>
@@ -12,8 +12,8 @@
                 <span asp-validation-for="VideoUrl" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="VideoUrl" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -30,16 +30,8 @@
 
 
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="CreateVideoSection" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
-
-<div>
-    <a asp-controller="Lessons" asp-action="Details" asp-route-id="@ViewData["lessonId"]">Back to lesson</a>
-</div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
