add: edit functionality for video section

--- a/BasicTemplate/KiberlabLMS/KiberlabLMS/Views/Lessons/Details.cshtml
+++ b/BasicTemplate/KiberlabLMS/KiberlabLMS/Views/Lessons/Details.cshtml
@@ -49,9 +49,9 @@
 <div>
     <ul>
         
-        @foreach (var section in Model.Sections)
+        @foreach (var modelSection in Model.Sections)
         {
-        <a href="#"><li>@Html.DisplayFor(sectionItem => section.Name)</li></a>
+        <a asp-controller="Sections" asp-action="Details" asp-route-id="@modelSection.Id"><li>@Html.DisplayFor(sectionItem => modelSection.Name)</li></a>
         }
     </ul>
 </div>
