--- a/BasicTemplate/KiberlabLMS/KiberlabLMS/Views/Shared/_SectionDetailsLayout.cshtml
+++ b/BasicTemplate/KiberlabLMS/KiberlabLMS/Views/Shared/_SectionDetailsLayout.cshtml
@@ -7,5 +7,5 @@
 <div>
     <a asp-controller="Lessons" asp-action="Details" asp-route-id="@Model.LessonId">Back to lesson</a> |
     <a asp-controller="Sections" asp-action="Edit" asp-route-id="@Model.Id", asp-route-sectionType="@Model.SectionType">Edit</a> |
-    <a asp-controller="Sections" asp-action="Delete" asp-route-id="@Model.Id">Delete</a> |
+    <a asp-controller="Sections" asp-action="Delete" asp-route-id="@Model.Id" asp-route-sectionType="@Model.SectionType">Delete</a> |
 </div>
